# trabajo-final-sistemas-inteligentes

./: .gitignore  PRESENTACION_INFO.md  README.md  pyproject.toml
src/: main.py
src/basketball_detector/ai_models/: __init__.py  base_model.py  google_model.py  models.py  prompt_provider.py
src/basketball_detector/models/: __init__.py  detection_model.py
src/basketball_detector/services/: __init__.py  detection_service.py  video_service.py
src/basketball_detector/utils/: __init__.py  logger.py  manage_temp_files.py  video_writer.py
src/static/css/: style.css
src/templates/: home.html
tests/: conftest.py  test_video_service.py
