[project]
name = "basketball-detector"
version = "0.1.0"
description = ""
authors = [
    {name = "Andres Molina",email = "andres.molinae29@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics (>=8.4.17,<9.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "fastapi (>=0.133.1,<0.134.0)",
    "uvicorn (>=0.41.0,<0.42.0)"
]

[tool.poetry]
packages = [{include = "basketball_detector", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"
[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]
